crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@227.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(1,4) &< nummultirange(numrange(3,4));"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    AExpr@7..50
      FuncCall@7..19
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "1"
        Ascii44@17..18 ","
        AConst@18..19
          Iconst@18..19 "4"
      Ascii41@19..20 ")"
      Whitespace@20..21 " "
      Op@21..23 "&<"
      Whitespace@23..24 " "
      FuncCall@24..50
        Ident@24..37 "nummultirange"
        Ascii40@37..38 "("
        FuncCall@38..50
          Ident@38..46 "numrange"
          Ascii40@46..47 "("
          AConst@47..48
            Iconst@47..48 "3"
          Ascii44@48..49 ","
          AConst@49..50
            Iconst@49..50 "4"
  Ascii41@50..51 ")"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

