crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@234.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(3.5,6)) &< numrange(3,4);"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      FuncCall@7..35
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..35
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..33
            Fconst@30..33 "3.5"
          Ascii44@33..34 ","
          AConst@34..35
            Iconst@34..35 "6"
      Ascii41@35..36 ")"
      Ascii41@36..37 ")"
      Whitespace@37..38 " "
      Op@38..40 "&<"
      Whitespace@40..41 " "
      FuncCall@41..53
        Ident@41..49 "numrange"
        Ascii40@49..50 "("
        AConst@50..51
          Iconst@50..51 "3"
        Ascii44@51..52 ","
        AConst@52..53
          Iconst@52..53 "4"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

